Clean up CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,11 @@
-cmake_minimum_required ( VERSION 3.8 )
+cmake_minimum_required(VERSION 3.13)
 
-set ( CMAKE_CXX_STANDARD 17 )
+project(stimpak CXX)
+set(CMAKE_CXX_STANDARD 20)
 
-add_library ( stimpak INTERFACE )
+add_library(stimpak
+  INTERFACE)
 
-target_include_directories ( stimpak INTERFACE
-    "include" )
+target_include_directories(stimpak
+  INTERFACE
+    ${PROJECT_SOURCE_DIR}/include)
